Indicator graphics Transitions for changing vertical divider Added side panels

--- a/breakout.html
+++ b/breakout.html
@@ -4,7 +4,11 @@ layout: master
 myscripts: /js/mylibs/demo.js
 simple: production
 ---
-<div class="indicators topleft"></div>
+<div class="indicators topbg"></div>
+
+<div class="indicators topleft">
+<img src="../images/caplin-logo.png">
+</div>
 
 <div class="indicators topcenter">
 	<span class="drop-area" target="new-window">New Window</span>
@@ -12,7 +16,10 @@ simple: production
 	<form method="GET" action="./#panel-4" target="new-panel-4" id="make-tab"><button type="submit" class="breakout">(internal)</button></form>
 </div>
 
-<div class="indicators topright"></div>
+<div class="indicators topright">
+<img src="../images/right-indicators.png">
+</div>
+
 
 <div class="content divided-66-33">
 
