--- a/upper-lower.html
+++ b/upper-lower.html
@@ -4,9 +4,14 @@ layout: master
 myscripts: /js/mylibs/demo.js
 simple: production
 ---
-<div class="indicators topleft"></div>
+<div class="indicators topbg"></div>
+<div class="indicators topleft">
+<img src="../images/caplin-logo.png">
+</div>
 <div class="indicators topcenter"></div>
-<div class="indicators topright"></div>
+<div class="indicators topright">
+<img src="../images/right-indicators.png">
+</div>
 
 
 
