bottom indicators bg

--- a/breakout.html
+++ b/breakout.html
@@ -20,6 +20,8 @@ simple: production
 <img src="../images/right-indicators.png">
 </div>
 
+<div class="indicators bottombg"></div>
+
 
 <div class="content divided-66-33">
 
